# Personalized-DSA-Coach

./: .env.example  .gitignore  Procfile  README.md  docker-compose.yml  dsa-coach-ui.html  nixpacks.toml  pyproject.toml  requirements.txt  start.ps1
.github/workflows/: daily_nudge.yml
app/: config.py  main.py
app/agent/: coach_graph.py
app/agent/prompts/: coach_prompts.py
app/agent/tools/: coach_tools.py
app/api/: schemas.py
app/api/routes/: chat.py  routes.py
app/db/: models.py  session.py
app/db/migrations/: env.py
app/services/: llm.py  progress_service.py  telegram_service.py  vector_store.py
app/workers/: celery_app.py  tasks.py
tests/integration/: test_api.py
tests/unit/: test_core.py
