[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dsa-coach-backend"
version = "0.1.0"
description = "Agentic DSA Coach Backend"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # Agent / LLM  (auto-switches Groq on cloud, Ollama locally)
    "langchain>=0.2.16",
    "langchain-ollama>=0.1.3",
    "langchain-groq>=0.1.9",
    "langchain-community>=0.2.16",
    "langgraph>=0.1.19",

    # Vector Store
    "chromadb>=0.5.3",
    "sentence-transformers>=3.0.1",

    # Database
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "psycopg2-binary>=2.9.12",

    # Background Jobs
    "celery>=5.4.0",
    "redis>=5.0.7",
    "celery[redis]>=5.4.0",

    # Telegram
    "python-telegram-bot>=21.3",

    # Utilities
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "tenacity>=8.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-mock==3.14.0",
    "httpx==0.27.0",
    "ruff==0.4.10",
    "mypy==1.10.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
